oksy - index_mobile заменён v2

--- a/sites/1_new-lex/index_mobile.html
+++ b/sites/1_new-lex/index_mobile.html
@@ -10,12 +10,15 @@
 	<link rel="stylesheet" href="libs/slick-slider/slick.css">
 	<!-- Magnific Popup CSS -->
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
+	<!-- Google Fonts Manrope -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600&display=swap" rel="stylesheet">
 	<!-- Animate CSS -->
-	<link rel="stylesheet" href="css/animate.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.min.css">
-	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 
 <body>
@@ -54,7 +57,7 @@
 						</li>
 					</ul>
 					<div class="header__nav-close">
-						<img data-src="img/close-icon.svg" class="lazyload">
+						<img src="img/close-icon.svg">
 					</div>
 					<div class="header__nav-socials">
 						<a href="#" class="header__nav-link">
@@ -153,7 +156,7 @@
 						</h2>
 					</div>
 					<div class="how__img">
-						<img data-src="img/how-img.svg" class="lazyload">
+						<img src="img/how-img.svg">
 					</div>
 				</div>
 				<div class="how__right animate__fadeInRight animate__animated wow">
@@ -263,7 +266,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img data-src="img/we-img1.svg" class="lazyload">
+											<img src="img/we-img1.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -283,7 +286,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img data-src="img/we-img2.svg" class="lazyload">
+											<img src="img/we-img2.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -303,7 +306,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img data-src="img/we-img3.svg" class="lazyload">
+											<img src="img/we-img3.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -327,7 +330,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img data-src="img/we-img1.svg" class="lazyload">
+											<img src="img/we-img1.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -347,7 +350,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img data-src="img/we-img2.svg" class="lazyload">
+											<img src="img/we-img2.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -367,7 +370,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img data-src="img/we-img3.svg" class="lazyload">
+											<img src="img/we-img3.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -391,7 +394,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img data-src="img/we-img1.svg" class="lazyload">
+											<img src="img/we-img1.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -411,7 +414,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img data-src="img/we-img2.svg" class="lazyload">
+											<img src="img/we-img2.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -431,7 +434,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img data-src="img/we-img3.svg" class="lazyload">
+											<img src="img/we-img3.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -455,7 +458,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img data-src="img/we-img1.svg" class="lazyload">
+											<img src="img/we-img1.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -475,7 +478,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img data-src="img/we-img2.svg" class="lazyload">
+											<img src="img/we-img2.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -495,7 +498,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img data-src="img/we-img3.svg" class="lazyload">
+											<img src="img/we-img3.svg">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -540,7 +543,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img data-src="img/we-img1.svg" class="lazyload">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -560,7 +563,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img data-src="img/we-img2.svg" class="lazyload">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -580,7 +583,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img data-src="img/we-img3.svg" class="lazyload">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -607,7 +610,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img data-src="img/we-img1.svg" class="lazyload">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -627,7 +630,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img data-src="img/we-img2.svg" class="lazyload">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -647,7 +650,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img data-src="img/we-img3.svg" class="lazyload">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -674,7 +677,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img data-src="img/we-img1.svg" class="lazyload">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -694,7 +697,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img data-src="img/we-img2.svg" class="lazyload">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -714,7 +717,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img data-src="img/we-img3.svg" class="lazyload">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -741,7 +744,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img data-src="img/we-img1.svg" class="lazyload">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -761,7 +764,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img data-src="img/we-img2.svg" class="lazyload">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -781,7 +784,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img data-src="img/we-img3.svg" class="lazyload">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -894,7 +897,7 @@
 			<div class="work__box animate__animated wow animate__zoomInDown">
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img data-src="img/work-img1.svg" class="lazyload">
+						<img src="img/work-img1.svg">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -908,12 +911,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img data-src="img/work-img11.svg" class="lazyload">
+						<img src="img/work-img11.svg">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img data-src="img/work-img2.svg" class="lazyload">
+						<img src="img/work-img2.svg">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -926,12 +929,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img data-src="img/work-img11.svg" class="lazyload">
+						<img src="img/work-img11.svg">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img data-src="img/work-img3.svg" class="lazyload">
+						<img src="img/work-img3.svg">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -944,12 +947,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img data-src="img/work-img11.svg" class="lazyload">
+						<img src="img/work-img11.svg">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img data-src="img/work-img4.svg" class="lazyload">
+						<img src="img/work-img4.svg">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -962,12 +965,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img data-src="img/work-img11.svg" class="lazyload">
+						<img src="img/work-img11.svg">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img data-src="img/work-img5.svg" class="lazyload">
+						<img src="img/work-img5.svg">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -980,7 +983,7 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img data-src="img/work-img11.svg" class="lazyload">
+						<img src="img/work-img11.svg">
 					</div>
 				</div>
 			</div>
@@ -1003,7 +1006,7 @@
 			<div class="why__box">
 				<div class="why__item why__item--first">
 					<div class="why__item-img why__item-img--first">
-						<img data-src="img/why-img1.svg" class="lazyload">
+						<img src="img/why-img1.svg">
 					</div>
 					<div class="why__item-text">
 						На связи любым удобным для Вас способом 24/7: личный кабинет, почта, мессенджер, телефон
@@ -1011,7 +1014,7 @@
 				</div>
 				<div class="why__item why__item--second">
 					<div class="why__item-img why__item-img--second">
-						<img data-src="img/why-img2.svg" class="lazyload">
+						<img src="img/why-img2.svg">
 					</div>
 					<div class="why__item-text">
 						Юристы и бухгалтеры широкого профиля с большим опытом
@@ -1020,7 +1023,7 @@
 				</div>
 				<div class="why__item why__item--last">
 					<div class="why__item-img">
-						<img data-src="img/why-img3.svg" class="lazyload">
+						<img src="img/why-img3.svg">
 					</div>
 					<div class="why__item-text">
 						С нашим сервисом снижаются расходы на персонал
@@ -1045,12 +1048,12 @@
 							<a href="#popup" class="popup-link ask__btn btn--white">Получить консультацию</a>
 						</div>
 						<div class="ask__btn-icon">
-							<img data-src="img/one-btn-icon.svg" class="lazyload">
+							<img src="img/one-btn-icon.svg">
 						</div>
 					</div>
 				</div>
 				<div class="ask__right">
-					<img data-src="img/ask-img.svg" class="lazyload">
+					<img src="img/ask-img.svg">
 				</div>
 			</div>
 		</div>
@@ -1069,7 +1072,7 @@
 						</h2>
 					</div>
 					<div class="serv__img animate__animated wow animate__jackInTheBox">
-						<img data-src="img/serv-img.svg" class="lazyload">
+						<img src="img/serv-img.svg">
 					</div>
 				</div>
 				<div class="serv__right">
@@ -1099,7 +1102,7 @@
 						</h2>
 					</div>
 					<div class="serv__img animate__animated wow animate__jackInTheBox">
-						<img data-src="img/inc-img.svg" class="lazyload">
+						<img src="img/inc-img.svg">
 					</div>
 				</div>
 				<div class="serv__right">
@@ -1129,7 +1132,7 @@
 			<div class="inter__box">
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img data-src="img/inter-img1.svg" class="lazyload">
+						<img src="img/inter-img1.svg">
 					</div>
 					<div class="inter__item-text">
 						После заключения договора с Вами связывается бухгалтер, который будет осуществлять обслуживание
@@ -1138,7 +1141,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img data-src="img/inter-img2.svg" class="lazyload">
+						<img src="img/inter-img2.svg">
 					</div>
 					<div class="inter__item-text">
 						Сложные вопросы передаются для решения консультантам
@@ -1146,7 +1149,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img data-src="img/inter-img3.svg" class="lazyload">
+						<img src="img/inter-img3.svg">
 					</div>
 					<div class="inter__item-text">
 						Виды связи с бухгалтером: электронная почта, телефон, WatsApp
@@ -1154,7 +1157,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img data-src="img/inter-img4.svg" class="lazyload">
+						<img src="img/inter-img4.svg">
 					</div>
 					<div class="inter__item-text">
 						Время подготовки первичных документов — 1 час
@@ -1168,7 +1171,7 @@
 		<div class="container">
 			<div class="footer__top">
 				<div class="footer__logo">
-					<img data-src="img/logo.svg" class="lazyload">
+					<img src="img/logo.svg">
 				</div>
 				<div class="footer__column">
 					<a href="#" class="footer__list">Юридическое сопровождение</a>
@@ -1188,10 +1191,10 @@
 					<a href="tel:79999999999" class="footer__phone">+7 (999) 999-99-99</a>
 					<div class="footer__socials footer__socials--mob">
 						<a href="#" class="footer__socials-link">
-							<img data-src="img/tg-icon.svg" class="lazyload">
+							<img src="img/tg-icon.svg">
 						</a>
 						<a href="#" class="footer__socials-link">
-							<img data-src="img/fb-icon.svg" class="lazyload">
+							<img src="img/fb-icon.svg">
 						</a>
 					</div>
 				</div>
@@ -1199,10 +1202,10 @@
 			<div class="footer__bottom">
 				<div class="footer__socials footer__socials--desk">
 					<a href="#" class="footer__socials-link">
-						<img data-src="img/tg-icon.svg" class="lazyload">
+						<img src="img/tg-icon.svg">
 					</a>
 					<a href="#" class="footer__socials-link">
-						<img data-src="img/fb-icon.svg" class="lazyload">
+						<img src="img/fb-icon.svg">
 					</a>
 				</div>
 				<div class="footer__docs">
@@ -1247,13 +1250,11 @@
 	<!-- Magnific Popup JS -->
 	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Wow js -->
-	<script src="js/wow.min.js"></script>
+	<script async src="js/wow.min.js"></script>
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
-	<script async src="portfolio-interface/pi.js"></script>
 	<script async src="js/lazysizes.min.js"></script>
-	<script async src="js/ls.bgset.min.js"></script>
 </body>
 
 </html>
