oksy - убран iframe

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -28,7 +28,7 @@
 <!-- portfolio interface -->
 <div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
 	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
-		<iframe src="index_mobile.html"></iframe>
+		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
 <div class="yuchoise">
