--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -1352,7 +1352,7 @@
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
-	<script async src="js/lazysizes.min.js"></script>
+	<script src="js/lazysizes.min.js"></script>
 	<script async src="js/ls.bgset.min.js"></script>
 </body>
 </html>
