--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -542,10 +542,7 @@
 							<img data-src="img/about-img.png" class="lazyload">
 						</picture>
 						<div class="about-img_ring1">
-							<picture>
-								<source srcset="img/about-ring1.webp" type="image/webp">
-								<img data-src="img/about-ring1.svg" class="lazyload">
-							</picture>
+							<img data-src="img/about-ring1.svg" class="lazyload">
 						</div>
 					</div>
 				</div>
@@ -1352,7 +1349,7 @@
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
-	<script src="js/lazysizes.min.js"></script>
+	<script async src="js/lazysizes.min.js"></script>
 	<script async src="js/ls.bgset.min.js"></script>
 </body>
 </html>
