--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -26,8 +26,8 @@
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
-<div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
-	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
+<div class="yudevices">
+	<div class="yudevices__phone">
 		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
