oksy - test lazybg

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -26,8 +26,8 @@
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
-<div class="yudevices">
-	<div class="yudevices__phone">
+<div class="yudevices lazybg">
+	<div class="yudevices__phone lazybg">
 		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
