добавил скрипт который показывает поддержку webp

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -27,7 +27,7 @@
 </head>
 <!-- portfolio interface -->
 <div class="yudevices lazybg">
-	<div class="yudevices__phone lazybg">
+	<div class="yudevices__phone lazybgумни">
 		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
@@ -101,6 +101,10 @@
 	</header>
 	<!-- main -->
 	<section class="main-section lazybg">
+		<!--
+		<div class="main__background">
+			<img data-src="img/basic-bg.webp" class="lazyload">
+		</div>-->
 		<div class="container">
 			<div class="main-girl">
 				<picture>
