oksy - test без долгого jquery

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -44,7 +44,7 @@
 </a>
 <!-- portfolio interface -->
 
-<body class="main-body">
+<body class="main-body webp-support">
 	<!-- header -->
 	<header>
 		<div class="container">
