oksy ещё часть в webp

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -27,7 +27,7 @@
 </head>
 <!-- portfolio interface -->
 <div class="yudevices lazybg">
-	<div class="yudevices__phone lazybgумни">
+	<div class="yudevices__phone lazybg">
 		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
