oksy - пока убрал мапу

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -1209,6 +1209,7 @@
 		<div class="container">
 			<div class="contacts-wrapper">
 				<div class="contacts-map">
+					<!--
 					<div class="contacts-wrapper__script" style="position:relative;overflow:hidden;"><a
 							href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
 							style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a
@@ -1216,7 +1217,7 @@
 							style="color:#eee;font-size:12px;position:absolute;top:14px;">Крылатская улица, вл2с5 —
 							Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCURnOVvpB" width="600"
 							height="550" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			<div class="contacts-content">
