--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -13,8 +13,7 @@
 	<!-- Animate CSS -->
 	<link rel="stylesheet" href="css/animate.min.css" />
 	<!-- Базовые стили CSS -->
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
