oksy - slick slider подключён локально

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.svg">
 	<title>Gymnastics by Oksy Mathews - центр художественной гимнастики для детей</title>
-	<!-- Slick slider CDN -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+	<!-- Slick slider -->
+	<link rel="stylesheet" href="libs/slick-slider/slick.css">
 	<!-- Magnific Popup CSS -->
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
 	<!-- Animate CSS -->
@@ -1391,7 +1391,7 @@
 	<!-- Magnific Popup JS -->
 	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Slick Slider CDN -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+	<script src="libs/slick-slider/slick.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
