oksy - убрал некоторые lazyload

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -17,8 +17,8 @@
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
-<div class="yudevices lazybg">
-	<div class="yudevices__phone lazybg">
+<div class="yudevices">
+	<div class="yudevices__phone">
 		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
@@ -91,7 +91,7 @@
 		</div>
 	</header>
 	<!-- main -->
-	<section class="main-section lazybg">
+	<section class="main-section">
 		<div class="container">
 			<div class="main-girl">
 				<picture>
