new lex - подключил main и media css

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" href="css/animate.min.css" />
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
