--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -689,14 +689,14 @@
 	<!-- jQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- maskedinput -->
-	<script src="js/jquery.maskedinput.min.js"></script>
+	<script async src="js/jquery.maskedinput.min.js"></script>
 	<!-- Slick slider JS -->
-	<script src="libs/slick-slider/slick.min.js"></script>
+	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Magnific Popup JS -->
-	<script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Базовые скрипты javascript -->
-	<script src="js/main.js"></script>
-	<script src="portfolio-interface/pi.js"></script>
+	<script async src="js/main.js"></script>
+	<script async src="portfolio-interface/pi.js"></script>
 </body>
 
 </html>
