ef - заменены webp и добавлен lazysizes

--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -138,7 +138,10 @@
 	<!-- comp -->
 	<section class="comp">
 		<div class="comp__bg1">
-			<img src="img/comp-bg.png">
+			<picture>
+				<source data-srcset="img/comp-bg.webp" type="image/webp">
+				<img data-src="img/comp-bg.png" class="bb1 lazyload">
+			</picture>
 		</div>
 		<div class="container">
 			<h2 class="title comp__title">
@@ -175,7 +178,10 @@
 				</div>
 				<div class="comp__right">
 					<a href="#" class="comp__video">
-						<img src="img/comp-video.png">
+						<picture>
+							<source data-srcset="img/comp-video.webp" type="image/webp">
+							<img data-src="img/comp-video.png" class="bb1 lazyload">
+						</picture>
 					</a>
 				</div>
 				<div class="hidden">
@@ -196,7 +202,10 @@
 		<div class="ware__container">
 			<div class="ware__row ware__row--first">
 				<div class="ware__img ware__img--first">
-					<img src="img/ware-img1.png">
+					<picture>
+						<source data-srcset="img/ware-img1.webp" type="image/webp">
+						<img data-src="img/ware-img1.png" class="bb1 lazyload">
+					</picture>
 				</div>
 				<div class="ware__row-wrapper ware__row-wrapper--first">
 					<div class="ware__adv">
@@ -248,15 +257,24 @@
 					</div>
 				</div>
 				<div class="ware__img ware__img--second">
-					<img src="img/ware-img2.png">
+					<picture>
+						<source data-srcset="img/ware-img2.webp" type="image/webp">
+						<img data-src="img/ware-img2.png" class="bb1 lazyload">
+					</picture>
 					<div class="modern__app">
-						<img src="img/modern-app.png">
+						<picture>
+							<source data-srcset="img/modern-app.webp" type="image/webp">
+							<img data-src="img/modern-app.png" class="bb1 lazyload">
+						</picture>
 					</div>
 				</div>
 			</div>
 			<div class="ware__row ware__row--third">
 				<div class="ware__img ware__img--third">
-					<img src="img/ware-img3.png">
+					<picture>
+						<source data-srcset="img/ware-img3.webp" type="image/webp">
+						<img data-src="img/ware-img3.png" class="bb1 lazyload">
+					</picture>
 				</div>
 				<div class="ware__row-wrapper ware__row-wrapper--third">
 					<div class="ware__resp">
@@ -298,7 +316,10 @@
 				<img src="img/deliver-way.svg">
 			</div>
 			<div class="deliver__car">
-				<img src="img/deliver-car.png">
+				<picture>
+					<source data-srcset="img/deliver-car.webp" type="image/webp">
+					<img data-src="img/deliver-car.png" class="bb1 lazyload">
+				</picture>
 			</div>
 			<div class="deliver__cubes">
 				<img src="img/deliver-cubes.svg">
@@ -358,10 +379,16 @@
 				</div>
 				<div class="cab__right">
 					<div class="cab__devices">
-						<img src="img/cab-devices.png">
+						<picture>
+							<source data-srcset="img/cab-devices.webp" type="image/webp">
+							<img data-src="img/cab-devices.png" class="bb1 lazyload">
+						</picture>
 					</div>
 					<div class="cab__devices-yellow">
-						<img src="img/cab-devices-yellow.png">
+						<picture>
+							<source data-srcset="img/cab-devices-yellow.webp" type="image/webp">
+							<img data-src="img/cab-devices-yellow.png" class="bb1 lazyload">
+						</picture>
 					</div>
 				</div>
 			</div>
@@ -376,7 +403,10 @@
 			<div class="add__wrapper">
 				<div class="add__column">
 					<div class="add__img">
-						<img src="img/add-img1.png">
+						<picture>
+							<source data-srcset="img/add-img1.webp" type="image/webp">
+							<img data-src="img/add-img1.png" class="bb1 lazyload">
+						</picture>
 					</div>
 					<div class="add__content">
 						<div class="add__name">
@@ -402,13 +432,19 @@
 						</div>
 					</div>
 					<div class="add__img">
-						<img src="img/add-img2.png">
+						<picture>
+							<source data-srcset="img/add-img2.webp" type="image/webp">
+							<img data-src="img/add-img2.png" class="bb1 lazyload">
+						</picture>
 					</div>
 				</div>
 
 				<div class="add__column">
 					<div class="add__img">
-						<img src="img/add-img3.png">
+						<picture>
+							<source data-srcset="img/add-img3.webp" type="image/webp">
+							<img data-src="img/add-img3.png" class="bb1 lazyload">
+						</picture>
 					</div>
 					<div class="add__content add__content--third">
 						<div class="add__name">
@@ -443,7 +479,10 @@
 				<div class="slider__item">
 					<div class="trust__item">
 						<div class="trust__item-img">
-							<img src="img/trust-img1.png">
+							<picture>
+								<source data-srcset="img/trust-img1.webp" type="image/webp">
+								<img data-src="img/trust-img1.png" class="bb1 lazyload">
+							</picture>
 						</div>
 						<div class="trust__item-about">
 							<div class="trust__item-wrapper">
@@ -468,7 +507,10 @@
 				<div class="slider__item">
 					<div class="trust__item">
 						<div class="trust__item-img">
-							<img src="img/trust-img1.png">
+							<picture>
+								<source data-srcset="img/trust-img1.webp" type="image/webp">
+								<img data-src="img/trust-img1.png" class="bb1 lazyload">
+							</picture>
 						</div>
 						<div class="trust__item-about">
 							<div class="trust__item-wrapper">
@@ -697,6 +739,7 @@
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
+	<script async src="js/lazysizes.min.js"></script>
 </body>
 
 </html>
