--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -140,7 +140,7 @@
 		<div class="comp__bg1">
 			<picture>
 				<source data-srcset="img/comp-bg.webp" type="image/webp">
-				<img data-src="img/comp-bg.png" class="bb1 lazyload">
+				<img data-src="img/comp-bg.png" class="lazyload">
 			</picture>
 		</div>
 		<div class="container">
@@ -180,7 +180,7 @@
 					<a href="#" class="comp__video">
 						<picture>
 							<source data-srcset="img/comp-video.webp" type="image/webp">
-							<img data-src="img/comp-video.png" class="bb1 lazyload">
+							<img data-src="img/comp-video.png" class="lazyload">
 						</picture>
 					</a>
 				</div>
@@ -204,7 +204,7 @@
 				<div class="ware__img ware__img--first">
 					<picture>
 						<source data-srcset="img/ware-img1.webp" type="image/webp">
-						<img data-src="img/ware-img1.png" class="bb1 lazyload">
+						<img data-src="img/ware-img1.png" class="lazyload">
 					</picture>
 				</div>
 				<div class="ware__row-wrapper ware__row-wrapper--first">
@@ -259,12 +259,12 @@
 				<div class="ware__img ware__img--second">
 					<picture>
 						<source data-srcset="img/ware-img2.webp" type="image/webp">
-						<img data-src="img/ware-img2.png" class="bb1 lazyload">
+						<img data-src="img/ware-img2.png" class="lazyload">
 					</picture>
 					<div class="modern__app">
 						<picture>
 							<source data-srcset="img/modern-app.webp" type="image/webp">
-							<img data-src="img/modern-app.png" class="bb1 lazyload">
+							<img data-src="img/modern-app.png" class="lazyload">
 						</picture>
 					</div>
 				</div>
@@ -273,7 +273,7 @@
 				<div class="ware__img ware__img--third">
 					<picture>
 						<source data-srcset="img/ware-img3.webp" type="image/webp">
-						<img data-src="img/ware-img3.png" class="bb1 lazyload">
+						<img data-src="img/ware-img3.png" class="lazyload">
 					</picture>
 				</div>
 				<div class="ware__row-wrapper ware__row-wrapper--third">
@@ -318,7 +318,7 @@
 			<div class="deliver__car">
 				<picture>
 					<source data-srcset="img/deliver-car.webp" type="image/webp">
-					<img data-src="img/deliver-car.png" class="bb1 lazyload">
+					<img data-src="img/deliver-car.png" class="lazyload">
 				</picture>
 			</div>
 			<div class="deliver__cubes">
@@ -381,13 +381,13 @@
 					<div class="cab__devices">
 						<picture>
 							<source data-srcset="img/cab-devices.webp" type="image/webp">
-							<img data-src="img/cab-devices.png" class="bb1 lazyload">
+							<img data-src="img/cab-devices.png" class="lazyload">
 						</picture>
 					</div>
 					<div class="cab__devices-yellow">
 						<picture>
 							<source data-srcset="img/cab-devices-yellow.webp" type="image/webp">
-							<img data-src="img/cab-devices-yellow.png" class="bb1 lazyload">
+							<img data-src="img/cab-devices-yellow.png" class="lazyload">
 						</picture>
 					</div>
 				</div>
@@ -405,7 +405,7 @@
 					<div class="add__img">
 						<picture>
 							<source data-srcset="img/add-img1.webp" type="image/webp">
-							<img data-src="img/add-img1.png" class="bb1 lazyload">
+							<img data-src="img/add-img1.png" class="lazyload">
 						</picture>
 					</div>
 					<div class="add__content">
@@ -434,7 +434,7 @@
 					<div class="add__img">
 						<picture>
 							<source data-srcset="img/add-img2.webp" type="image/webp">
-							<img data-src="img/add-img2.png" class="bb1 lazyload">
+							<img data-src="img/add-img2.png" class="lazyload">
 						</picture>
 					</div>
 				</div>
@@ -443,7 +443,7 @@
 					<div class="add__img">
 						<picture>
 							<source data-srcset="img/add-img3.webp" type="image/webp">
-							<img data-src="img/add-img3.png" class="bb1 lazyload">
+							<img data-src="img/add-img3.png" class="lazyload">
 						</picture>
 					</div>
 					<div class="add__content add__content--third">
@@ -481,7 +481,7 @@
 						<div class="trust__item-img">
 							<picture>
 								<source data-srcset="img/trust-img1.webp" type="image/webp">
-								<img data-src="img/trust-img1.png" class="bb1 lazyload">
+								<img data-src="img/trust-img1.png" class="lazyload">
 							</picture>
 						</div>
 						<div class="trust__item-about">
@@ -509,7 +509,7 @@
 						<div class="trust__item-img">
 							<picture>
 								<source data-srcset="img/trust-img1.webp" type="image/webp">
-								<img data-src="img/trust-img1.png" class="bb1 lazyload">
+								<img data-src="img/trust-img1.png" class="lazyload">
 							</picture>
 						</div>
 						<div class="trust__item-about">
@@ -683,6 +683,7 @@
 				</div>
 			</div>
 		</div>
+		<!--
 		<div class="cont__map cont__map--ware cont__map--active">
 			<div style="position:relative;overflow:hidden;"><a
 					href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
@@ -700,7 +701,7 @@
 					style="color:#eee;font-size:12px;position:absolute;top:14px;">Михайловский проезд, 1с1 —
 					Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUNFZUQ3C" width="100%"
 					height="100%" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-		</div>
+		</div>-->
 	</section>
 	<!-- popup -->
 	<div class="hidden">
