ef - заменён index mobile 2

--- a/sites/3_ef/index_mobile.html
+++ b/sites/3_ef/index_mobile.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 
 <body>
@@ -119,7 +120,10 @@
 	<!-- comp -->
 	<section class="comp">
 		<div class="comp__bg1">
-			<img src="img/comp-bg.png">
+			<picture>
+				<source data-srcset="img/comp-bg.webp" type="image/webp">
+				<img data-src="img/comp-bg.png" class="lazyload">
+			</picture>
 		</div>
 		<div class="container">
 			<h2 class="title comp__title">
@@ -156,7 +160,10 @@
 				</div>
 				<div class="comp__right">
 					<a href="#" class="comp__video">
-						<img src="img/comp-video.png">
+						<picture>
+							<source data-srcset="img/comp-video.webp" type="image/webp">
+							<img data-src="img/comp-video.png" class="lazyload">
+						</picture>
 					</a>
 				</div>
 				<div class="hidden">
@@ -177,7 +184,10 @@
 		<div class="ware__container">
 			<div class="ware__row ware__row--first">
 				<div class="ware__img ware__img--first">
-					<img src="img/ware-img1.png">
+					<picture>
+						<source data-srcset="img/ware-img1.webp" type="image/webp">
+						<img data-src="img/ware-img1.png" class="lazyload">
+					</picture>
 				</div>
 				<div class="ware__row-wrapper ware__row-wrapper--first">
 					<div class="ware__adv">
@@ -229,15 +239,24 @@
 					</div>
 				</div>
 				<div class="ware__img ware__img--second">
-					<img src="img/ware-img2.png">
+					<picture>
+						<source data-srcset="img/ware-img2.webp" type="image/webp">
+						<img data-src="img/ware-img2.png" class="lazyload">
+					</picture>
 					<div class="modern__app">
-						<img src="img/modern-app.png">
+						<picture>
+							<source data-srcset="img/modern-app.webp" type="image/webp">
+							<img data-src="img/modern-app.png" class="lazyload">
+						</picture>
 					</div>
 				</div>
 			</div>
 			<div class="ware__row ware__row--third">
 				<div class="ware__img ware__img--third">
-					<img src="img/ware-img3.png">
+					<picture>
+						<source data-srcset="img/ware-img3.webp" type="image/webp">
+						<img data-src="img/ware-img3.png" class="lazyload">
+					</picture>
 				</div>
 				<div class="ware__row-wrapper ware__row-wrapper--third">
 					<div class="ware__resp">
@@ -279,7 +298,10 @@
 				<img src="img/deliver-way.svg">
 			</div>
 			<div class="deliver__car">
-				<img src="img/deliver-car.png">
+				<picture>
+					<source data-srcset="img/deliver-car.webp" type="image/webp">
+					<img data-src="img/deliver-car.png" class="lazyload">
+				</picture>
 			</div>
 			<div class="deliver__cubes">
 				<img src="img/deliver-cubes.svg">
@@ -339,10 +361,16 @@
 				</div>
 				<div class="cab__right">
 					<div class="cab__devices">
-						<img src="img/cab-devices.png">
+						<picture>
+							<source data-srcset="img/cab-devices.webp" type="image/webp">
+							<img data-src="img/cab-devices.png" class="lazyload">
+						</picture>
 					</div>
 					<div class="cab__devices-yellow">
-						<img src="img/cab-devices-yellow.png">
+						<picture>
+							<source data-srcset="img/cab-devices-yellow.webp" type="image/webp">
+							<img data-src="img/cab-devices-yellow.png" class="lazyload">
+						</picture>
 					</div>
 				</div>
 			</div>
@@ -357,7 +385,10 @@
 			<div class="add__wrapper">
 				<div class="add__column">
 					<div class="add__img">
-						<img src="img/add-img1.png">
+						<picture>
+							<source data-srcset="img/add-img1.webp" type="image/webp">
+							<img data-src="img/add-img1.png" class="lazyload">
+						</picture>
 					</div>
 					<div class="add__content">
 						<div class="add__name">
@@ -383,13 +414,19 @@
 						</div>
 					</div>
 					<div class="add__img">
-						<img src="img/add-img2.png">
+						<picture>
+							<source data-srcset="img/add-img2.webp" type="image/webp">
+							<img data-src="img/add-img2.png" class="lazyload">
+						</picture>
 					</div>
 				</div>
 
 				<div class="add__column">
 					<div class="add__img">
-						<img src="img/add-img3.png">
+						<picture>
+							<source data-srcset="img/add-img3.webp" type="image/webp">
+							<img data-src="img/add-img3.png" class="lazyload">
+						</picture>
 					</div>
 					<div class="add__content add__content--third">
 						<div class="add__name">
@@ -424,7 +461,10 @@
 				<div class="slider__item">
 					<div class="trust__item">
 						<div class="trust__item-img">
-							<img src="img/trust-img1.png">
+							<picture>
+								<source data-srcset="img/trust-img1.webp" type="image/webp">
+								<img data-src="img/trust-img1.png" class="lazyload">
+							</picture>
 						</div>
 						<div class="trust__item-about">
 							<div class="trust__item-wrapper">
@@ -449,7 +489,10 @@
 				<div class="slider__item">
 					<div class="trust__item">
 						<div class="trust__item-img">
-							<img src="img/trust-img1.png">
+							<picture>
+								<source data-srcset="img/trust-img1.webp" type="image/webp">
+								<img data-src="img/trust-img1.png" class="lazyload">
+							</picture>
 						</div>
 						<div class="trust__item-about">
 							<div class="trust__item-wrapper">
@@ -622,6 +665,7 @@
 				</div>
 			</div>
 		</div>
+		<!--
 		<div class="cont__map cont__map--ware cont__map--active">
 			<div style="position:relative;overflow:hidden;"><a
 					href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
@@ -639,7 +683,7 @@
 					style="color:#eee;font-size:12px;position:absolute;top:14px;">Михайловский проезд, 1с1 —
 					Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUNFZUQ3C" width="100%"
 					height="100%" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-		</div>
+		</div>-->
 	</section>
 	<!-- popup -->
 	<div class="hidden">
@@ -670,13 +714,15 @@
 	<!-- jQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- maskedinput -->
-	<script src="js/jquery.maskedinput.min.js"></script>
+	<script async src="js/jquery.maskedinput.min.js"></script>
 	<!-- Slick slider JS -->
-	<script src="libs/slick-slider/slick.min.js"></script>
+	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Magnific Popup JS -->
-	<script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Базовые скрипты javascript -->
-	<script src="js/main.js"></script>
+	<script async src="js/main.js"></script>
+	<script async src="portfolio-interface/pi.js"></script>
+	<script async src="js/lazysizes.min.js"></script>
 </body>
 
 </html>
