--- a/sites/3_ef/index_mobile.html
+++ b/sites/3_ef/index_mobile.html
@@ -33,7 +33,7 @@
 					<i class="_icon-close"></i>
 				</div>
 				<a class="sidebar__logo">
-					<img src="img/logo2.svg">
+					<img data-src="img/logo2.svg" class="lazyload">
 				</a>
 				<ul class="menu">
 					<li class="menu__list"><a href="index.html" class="menu__link menu__link--here">Главная</a></li>
@@ -63,11 +63,11 @@
 		</div>
 		<div class="container">
 			<div class="main__cubes">
-				<img src="img/main-cubes.svg">
+				<img data-src="img/main-cubes.svg" class="lazyload">
 			</div>
 			<header class="header">
 				<a href="#" class="logo">
-					<img src="img/logo.svg">
+					<img data-src="img/logo.svg" class="lazyload">
 				</a>
 				<div class="header__right">
 					<a href="#" class="header__btn btnEmpty">
@@ -96,16 +96,16 @@
 				</div>
 				<div class="main__right main__slider">
 					<div class="main__ozon">
-						<img src="img/ozon-img.svg">
+						<img data-src="img/ozon-img.svg" class="lazyload">
 					</div>
 					<div class="main__ozon">
-						<img src="img/wildberries-img.svg">
+						<img data-src="img/wildberries-img.svg" class="lazyload">
 					</div>
 					<div class="main__ozon">
-						<img src="img/ydmarket-img.svg">
+						<img data-src="img/ydmarket-img.svg" class="lazyload">
 					</div>
 					<div class="main__ozon">
-						<img src="img/aliexpress-img.svg">
+						<img data-src="img/aliexpress-img.svg" class="lazyload">
 					</div>
 				</div>
 			</div>
@@ -201,7 +201,7 @@
 						</div>
 						<div class="ware__adv-item ware__adv-item--second">
 							<div class="ware__adv-img ware__adv-top">
-								<img src="img/were-adv-img.svg">
+								<img data-src="img/were-adv-img.svg" class="lazyload">
 							</div>
 							<div class="ware__adv-text">
 								Прочные металлические стеллажи
@@ -274,7 +274,7 @@
 			<div class="ware__bottom">
 				<div class="ware__bottom-left">
 					<div class="ware__bottom-logo">
-						<img src="img/pari-logo.svg">
+						<img data-src="img/pari-logo.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="ware__bottom-right">
@@ -295,7 +295,7 @@
 				Доставка <br>товара
 			</h2>
 			<div class="deliver__way">
-				<img src="img/deliver-way.svg">
+				<img data-src="img/deliver-way.svg" class="lazyload">
 			</div>
 			<div class="deliver__car">
 				<picture>
@@ -304,7 +304,7 @@
 				</picture>
 			</div>
 			<div class="deliver__cubes">
-				<img src="img/deliver-cubes.svg">
+				<img data-src="img/deliver-cubes.svg" class="lazyload">
 			</div>
 			<div class="deliver__wrapper">
 				<div class="deliver__left">
@@ -317,7 +317,7 @@
 					</div>
 					<div class="deliver__time">
 						<div class="deliver__time-icon">
-							<img src="img/time-icon.svg">
+							<img data-src="img/time-icon.svg" class="lazyload">
 						</div>
 						<div class="deliver__time-wrapp">
 							<div class="delive__time-number">
@@ -342,7 +342,7 @@
 					Фулфилмент платформа <br>с удобным личным <br>кабинетом
 				</div>
 				<div class="cab__raxs">
-					<img src="img/raxs-icon.svg">
+					<img data-src="img/raxs-icon.svg" class="lazyload">
 				</div>
 			</div>
 			<div class="cab__second">
@@ -451,7 +451,7 @@
 	<section class="trust" id="trust">
 		<div class="container trust__container">
 			<div class="trust__cubes">
-				<img src="img/trust-cubes.svg">
+				<img data-src="img/trust-cubes.svg" class="lazyload">
 			</div>
 			<h2 class="trust__title title">
 				Компании, которые <br>
